166816207-feat(profile): update and fetch profile
- install express file upload
- install cloudinary
- add get user profile controller
- add profile route
- add tests
- add documenttation
- create update user validator and controller
- create swagger documentation for update user

[Delivers #166816207]
