# routes/v1/profiles.js
@@ -1,0 +1,8 @@
+import express from 'express';
+import User from '../../controllers/profiles';
+
+const router = express.Router();
+
+router.get('/:username', User.getProfile);
+
+export default router;
